--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
-        "swiper": "^11.1.1"
+        "swiper": "^11.1.1",
+        "vite-plugin-vercel": "^9.0.3"
     }
 }
