--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "swiper": "^11.1.1",
+        "vercel-php": "^0.6.0",
         "vite-plugin-vercel": "^9.0.3"
     }
 }
