--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "vercel": [
+            "@php -v",
+            "npm -v",
+            "npm install && npm run dev"
+        ],
         "dev": "vite",
         "build": "vite build"
     },
