--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,28 @@
             "runtime": "vercel-php@0.6.0"
         }
     },
+    "routes": [
+        {
+            "src": "/(css|js)/(.*)$",
+            "dest": "/api/assets.php?type=$1&file=$2"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.php"
+        }
+    ],
     "headers": [
         {
-            "source": "/api/(.*)",
+            "source": [
+                {
+                    "src": "/(css|js)/(.*)$",
+                    "dest": "/api/assets.php?type=$1&file=$2"
+                },
+                {
+                    "src": "/(.*)",
+                    "dest": "/api/index.php"
+                }
+            ],
             "headers": [
                 {
                     "key": "Access-Control-Allow-Credentials",
