Vercel config xd

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
+        },
+        {
+            "src": "/img/(.*)",
+            "dest": "/static/img/$1"
         }
     ],
     "outputDirectory": "public",
@@ -29,6 +33,6 @@
         "VIEW_COMPILED_PATH": "/tmp",
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"  
+        "SESSION_DRIVER": "cookie"
     }
 }
