Vercel config xd

--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
         },
         {
             "src": "/img/(.*)",
-            "dest": "/static/img/$1"
+            "dest": "/img/$1"
         }
     ],
     "outputDirectory": "public",
